# gemini-cli-provenance-armor

./: .gitignore  README.md  main.py  pyproject.toml
config/: safe_commands.toml
demo/: run_demo.sh  test_real_loo.py  test_scenarios.py
demo/evidence/: 01_vulnerable_project_output.txt  02_protected_project_output.txt  03_real_loo_gemma4_output.txt  04_real_loo_gemma3_vllm_demo.txt  05_gemini_cli_live_session_raw.json  05_gemini_cli_project_logs_raw.json  05_gemini_interactive_block.md  06_gemini_cli_vulnerable_session_raw.json
demo/protected-project/: package.json
demo/vulnerable-project/: README.md
docs/: 01_indirect_prompt_injection.md  02_sandbox_escape_analysis.md  03_policy_engine_logic.md  04_data_leakage_prevention.md  05_supply_chain_security.md  06_trusted_folder_integrity.md  07_multi_agent_governance.md  08_temporal_policy_enforcement.md  09_mcp_security.md  10_hitl_ux_hardening.md  11_plan_mode_adversarial.md  12_code_assist_attack_surface.md  AUDIT_LOGGING_GUIDE.md  CAUSAL_ARMOR_INTEGRATION.md  INDEX.md  PROJECT_CHARTER.md  THREAT_VECTOR_MAP.md
hooks/: install.sh  provenance_armor_hook.py  settings.json
src/provenance_armor/: __init__.py  cli.py
tests/: conftest.py
tests/test_audit/: test_logger.py
tests/test_core/: test_analyzer.py  test_decomposer.py  test_pipeline.py  test_sanitizer.py  test_scorer.py
tests/test_intent/: test_classifier.py  test_similarity.py
tests/test_mcp/: test_gateway.py
tests/test_models/: test_context.py  test_scoring.py  test_tool_call.py
tests/test_policy/: test_loader.py  test_resolver.py
(+62 files in other folders)
