[project]
name = "provenance-armor"
version = "0.1.0"
description = "Causal-first security architecture for AI-driven CLI tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
ner = ["spacy>=3.7"]
intent = ["sentence-transformers>=2.0", "numpy>=1.24"]
llm = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
all = ["provenance-armor[ner,intent,llm,dev]"]

[project.scripts]
provenance-armor = "provenance_armor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/provenance_armor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
